--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,64 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>MyApp</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your App Name | Mental Health App</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <app-root></app-root>
+  <header class="header">
+    <div class="container">
+      <h1><a href="#">Your App Name</a></h1>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main class="main">
+    <div class="container">
+      <section class="hero">
+        <h2>Welcome to Your Mental Health App</h2>
+        <p>A description of your app and its benefits for mental well-being.</p>
+        <a href="#" class="btn">Get Started</a>
+      </section>
+
+      <section class="features">
+        <h2>Our Features</h2>
+        <div class="feature">
+          <i class="fas fa-star"></i> <h3>Feature 1</h3>
+          <p>A brief explanation of feature 1.</p>
+        </div>
+        </section>
+
+      <section class="about">
+        <h2>About Us</h2>
+        <p>Tell users more about your app and its mission.</p>
+      </section>
+
+      <section class="contact">
+        <h2>Contact Us</h2>
+        <p>Provide ways for users to reach you.</p>
+      </section>
+    </div>
+  </main>
+
+  <footer class="footer">
+    <div class="container">
+      <p>&copy; 2024 Your App Name. All Rights Reserved.</p>
+      <ul class="social-links">
+        <li><a href="#"><i class="fab fa-github"></i></a></li>
+        </ul>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
