--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your App Name | Mental Health App</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="styles.css">
+  
 </head>
 <body>
   <header class="header">
@@ -24,29 +24,7 @@
 
   <main class="main">
     <div class="container">
-      <section class="hero">
-        <h2>Welcome to Your Mental Health App</h2>
-        <p>A description of your app and its benefits for mental well-being.</p>
-        <a href="#" class="btn">Get Started</a>
-      </section>
-
-      <section class="features">
-        <h2>Our Features</h2>
-        <div class="feature">
-          <i class="fas fa-star"></i> <h3>Feature 1</h3>
-          <p>A brief explanation of feature 1.</p>
-        </div>
-        </section>
-
-      <section class="about">
-        <h2>About Us</h2>
-        <p>Tell users more about your app and its mission.</p>
-      </section>
-
-      <section class="contact">
-        <h2>Contact Us</h2>
-        <p>Provide ways for users to reach you.</p>
-      </section>
+      <app-root></app-root>
     </div>
   </main>
 
@@ -59,6 +37,6 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="dist/YOUR_APPLICATION_NAME/main.js"></script>
 </body>
 </html>
