--- a/index.html
+++ b/index.html
@@ -1,42 +1,14 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Leann's | Testing</title>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="styles.css">
-</head>
+  <title>Your App Name</title>
+  <link rel="stylesheet" href="styles.css">  </head>
 <body>
-  <header class="header">
-    <div class="container">
-      <h1><a href="#">Your App Name</a></h1>
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Features</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+  <app-root></app-root>
 
-  <main class="main">
-    <div class="container">
-      <app-root></app-root>
-    </div>
-  </main>
-
-  <footer class="footer">
-    <div class="container">
-      <p>&copy; 2024 Your App Name. All Rights Reserved.</p>
-      <ul class="social-links">
-        <li><a href="#"><i class="fab fa-github"></i></a></li>
-        </ul>
-    </div>
-  </footer>
-
-  <script src="dist/YOUR_APPLICATION_NAME/main.js"></script>
+  <script src="dist/leann/main.js"></script>
 </body>
 </html>
