deleted root directory html page and changes all of the index.js available

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,6 @@
     </div>
   </footer>
 
-  <script src="dist/YOUR_APPLICATION_NAME/main.js"></script>
+  <script src="dist/leann/main.js"></script>
 </body>
 </html>
