--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your App Name | Mental Health App</title>
+  <title>EnKai</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   
 </head>
@@ -13,10 +13,10 @@
       <h1><a href="#">Your App Name</a></h1>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Features</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="1">Chat</a></li>
+          <li><a href="2">Mood-tracker</a></li>
+          <li><a href="3">Journaling</a></li>
+          <li><a href="4">Login</a></li>
         </ul>
       </nav>
     </div>
